@@ -13,7 +13,33 @@ use Dist::Zilla 4.300039;
 use Module::Metadata;
 use Moose::Util::TypeConstraints 'enum';
 use MooseX::Types::Perl qw/StrictVersionStr/;
+use MooseX::Types::Moose qw(Str ArrayRef HashRef);
 use List::Util 1.33 qw/first any/;
+
+sub mvp_multivalue_args { qw(header_strs footer_strs) }
+
+sub mvp_aliases {
+    +{
+        header => 'header_strs',
+        footer => 'footer_strs',
+    }
+}
+
+around BUILDARGS => sub {
+    my $orig = shift;
+    my $class = shift;
+
+    my $args = $class->$orig(@_);
+
+    my $delimiter = delete $args->{delimiter};
+    if (defined $delimiter and length($delimiter)) {
+        foreach my $arg (grep exists $args->{$_}, qw(header_strs footer_strs)) {
+            s/^\Q$delimiter\E// foreach @{$args->{$arg}};
+        }
+    }
+
+    return $args;
+};
 
 has version_method => (
 	is      => 'ro',
@@ -78,14 +104,86 @@ has minimum_perl => (
 	},
 );
 
+has header_strs => (
+	is => 'ro', isa => ArrayRef[Str],
+	traits => ['Array'],
+	lazy => 1,
+	default => sub { [] },
+	documentation => "Additional code lines to include at the beginning of Makefile.PL",
+);
+
+has header_file => (
+	is => 'ro', isa => Str,
+	documentation => 'Additional header content to include from a file',
+);
+
+has header => (
+	is            => 'ro',
+	isa           => Str,
+	lazy          => 1,
+	builder       => '_build_header',
+	documentation => "A string included at the beginning of Makefile.PL",
+);
+
+sub _build_header {
+	my $self = shift;
+	join "\n",
+		@{$self->header_strs},
+		( $self->header_file
+			? do {
+				my $abs_file = path($self->zilla->root, $self->header_file);
+				$self->log_fatal([ 'header_file %s does not exist!', $self->header_file ])
+					if not $abs_file->exists;
+				$abs_file->slurp_utf8
+			}
+			: () );
+}
+
+has footer_strs => (
+	is => 'ro', isa => ArrayRef[Str],
+	traits => ['Array'],
+	lazy => 1,
+	default => sub { [] },
+	documentation => "Additional code lines to include at the end of Makefile.PL",
+);
+
+has footer_file => (
+	is => 'ro', isa => Str,
+	documentation => 'Additional footer content to include from a file',
+);
+
+has footer => (
+	is			=> 'ro',
+	isa		   => Str,
+	lazy		  => 1,
+	builder	   => '_build_footer',
+	documentation => "A string included at the end of Makefile.PL",
+);
+
+sub _build_footer {
+	my $self = shift;
+	join "\n",
+		@{$self->footer_strs},
+		( $self->footer_file
+			? do {
+				my $abs_file = path($self->zilla->root, $self->footer_file);
+				$self->log_fatal([ 'footer_file %s does not exist!', $self->footer_file ])
+					if not $abs_file->exists;
+				$abs_file->slurp_utf8
+			}
+			: () );
+}
+
+
 my $template = <<'BUILD_PL';
 # This Build.PL for {{ $dist_name }} was generated by {{ $plugin_title }}.
 use strict;
 use warnings;
-
+{{ $header }}
 use {{ $minimum_perl }};
 use Module::Build::Tiny{{ $version ne 0 && " $version" }};
 Build_PL();
+{{ $footer }}
 BUILD_PL
 
 sub register_prereqs {
@@ -149,6 +247,8 @@ sub setup_installer {
 			minimum_perl => $self->minimum_perl,
 			dist_name    => $self->zilla->name,
 			plugin_title => ref($self) . ' ' . ($self->VERSION || '<self>'),
+			header       => $self->header,
+			footer       => $self->footer,
 		});
 
 	$self->log_debug([ 'updating contents of Build.PL in memory' ]);
@@ -221,6 +321,23 @@ compatible - presently only the existence of F<.PL> and F<.xs> files are
 checked.
 
 =back
+
+=attr header
+
+A line of code which is included near the top of F<Build.PL>.  Can be used more than once.
+
+=attr footer
+
+A line of code which is included at the bottom of F<Build.PL>.  Can be used more than once.
+
+=attr delimiter
+
+A string, usually a single character, which is stripped from the beginning of
+all C<header>, and C<footer> lines. This is because the
+INI file format strips all leading whitespace from option values, so including
+this character at the front allows you to use leading whitespace in an option
+string.  This is helpful for the formatting of F<Build.PL>s, but a nice thing
+to have when inserting any block of code.
 
 =cut
 
